[git-patching] Start core features first, update core bundles with wider range